--- a/Dstos.html
+++ b/Dstos.html
@@ -5,7 +5,8 @@
   <body>
     <H2> Ronal alexander lopez mosquera</H2>
     <p>Edad: 18 años</p>
-    <p>tipo de documento: cedula</p>
+    <p>tipo de documento: cedula 1059236691</p>
     <p>direccion:cra9#24236</p>
+    <p>ficha:2930207</p>
   </body>
 </html>
