--- a/calendario.html
+++ b/calendario.html
@@ -6,5 +6,9 @@
     <H2> Calendario </H2>
     <p>calemdario sena</p>
     <h2>sistemas </h2>
+
+    <H2> Semana</H2>
+    <p> Dia</p>
+    <h2> Años</h2>
   </body>
 </html>
